Bump upstreams for 2022.09 Chlorine
Adopt the following versions:
- odlparent-11.0.0
- infrautils-4.0.0
- yangtools-9.0.0
- mdsal-10.0.0
- controller-6.0.0
- aaa-0.16.0
- netconf-4.0.0

Change-Id: I1ec2bc025dd5f6767ad6bf1c29dd3311cc3eae92
Signed-off-by: Robert Varga <robert.varga@pantheon.tech>